macro-template/tests/ui/empty_source.rs
use macro_template::template;

fn main() {
    template! {
        for T in [] {
            let _ = stringify!(T);
        }
    }
}
